--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/awesomenes"/>
+
+            <ImageView
+                android:layout_marginTop="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/youtube"
+                />
         </LinearLayout>
 
     <LinearLayout
@@ -46,5 +54,6 @@
             android:layout_height="wrap_content"
             android:text="@string/next"
             />
+
     </LinearLayout>
 </LinearLayout>
