--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/view"
     tools:context="com.fsw_fime.myfirstapp.MainActivity">
 
         <LinearLayout
@@ -12,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <TextView
+                android:id="@+id/welcome_txt"
                 android:layout_marginTop="80dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -20,12 +22,14 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 />
             <TextView
+                android:id="@+id/awesome_txt"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/awesomenes"/>
 
             <ImageView
+                android:id="@+id/youtube_img"
                 android:layout_marginTop="50dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,6 +45,7 @@
         android:orientation="horizontal"
         >
         <Button
+            android:onClick="clickdesdeMetodo"
             android:id="@+id/skip_btn"
             android:layout_weight="1"
             android:layout_width="match_parent"
