--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
             android:text="@string/skip"
             />
         <Button
+            android:onClick="clickdesdeMetodo"
             android:id="@+id/next_btn"
             android:layout_weight="1"
             android:layout_width="match_parent"
