--- a/app/src/main/res/layout/clima_layout.xml
+++ b/app/src/main/res/layout/clima_layout.xml
@@ -22,6 +22,7 @@
             android:layout_height="64dp" />
 
         <TextView
+            android:id="@+id/txt_temp"
             android:textAppearance="?android:textAppearanceLarge"
             android:text="30"
             android:paddingTop="16dp"
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/txt_city"
             android:text="ciudad"
             android:paddingTop="16dp"
             android:layout_marginLeft="16dp"
